list and edit userAvatar additions

--- a/Client/Components/UserAvatarActiveView.razor
+++ b/Client/Components/UserAvatarActiveView.razor
@@ -2,12 +2,16 @@
 @inject Learning.Client.Services.IUserAvatarLocalService UserAvatarLocal
 
 <MudText Typo="Typo.caption">@AvatarName</MudText>
+@if (UserAvatar != null) {
+    <img src="@UserAvatar.CoverImage" class="width:100%;" />
+    <MudText Typo="Typo.caption">@UserAvatar.Name</MudText>
+}
 
 @code {
-        [Parameter]
-        public UserAvatar UserAvatar { get; set; }
+    [Parameter]
+    public UserAvatar UserAvatar { get; set; }
 
-        string AvatarName { get { return UserAvatar == null ? "xxx" : UserAvatar.Name; } }
+    string AvatarName { get { return UserAvatar == null ? "xxx" : UserAvatar.Name; } }
 
     protected override async Task OnInitializedAsync() {
         UserAvatarLocal.OnChange += ActiveUserAvatarChange;
@@ -15,9 +19,9 @@
         await Task.Delay(0);
     }
     async void ActiveUserAvatarChange() {
-       
+
         UserAvatar = await UserAvatarLocal.Get();
-       
+
         StateHasChanged();
     }
 }
