--- a/Client/Pages/AddSlideDeckPage.razor
+++ b/Client/Pages/AddSlideDeckPage.razor
@@ -9,6 +9,7 @@
 <Learning.Client.Components.EditSlideDeck SlideDeck="SlideDeck" OnSave="SaveSlideDeck" Videos="Videos"></Learning.Client.Components.EditSlideDeck>
 
 @code {
+    //TODO: refactor with editSlideDeckPage 
     private SlideDeck SlideDeck = new SlideDeck();
     private List<Media> Videos;
 
