--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -56,6 +56,11 @@
                         <span class="oi oi-list-rich" aria-hidden="true"></span> addUserAvatar
                     </NavLink>
                 </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="allUserAvatars">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> list UserAvatar
+                    </NavLink>
+                </li>
 
             </Authorized>
             <NotAuthorized>
