--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -23,6 +23,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/admin/usersList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> /admin/usersList
+            </NavLink>
+        </li>
         <AuthorizeView>
             <Authorized>
                 >
@@ -71,7 +76,7 @@
                 </li>
             </NotAuthorized>
         </AuthorizeView>
-                
+
 
     </ul>
 </div>
