--- a/Client/Components/UserAvatarActiveView.razor
+++ b/Client/Components/UserAvatarActiveView.razor
@@ -7,6 +7,7 @@
     <MudText Typo="Typo.caption">@UserAvatar.Name</MudText>
 }
 
+
 @code {
     [Parameter]
     public UserAvatar UserAvatar { get; set; }
@@ -19,7 +20,7 @@
         await Task.Delay(0);
     }
     async void ActiveUserAvatarChange() {
-
+        Console.WriteLine("!! ActiveUserAvatarChange");
         UserAvatar = await UserAvatarLocal.Get();
 
         StateHasChanged();
