--- a/Client/Shared/AdminLayout.razor
+++ b/Client/Shared/AdminLayout.razor
@@ -5,7 +5,7 @@
             <Learning.Client.Components.UserAvatarActiveView />
             <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
         </div>
-        <AuthorizeView Roles="admin, superuser">
+        <AuthorizeView Roles="Admin, superuser">
             <Authorized>
                 <div class="content px-4">
                     @Body
